chore: fixed alignment

--- a/src/components/division/infiniteCarousel/InfiniteCarousel.module.css
+++ b/src/components/division/infiniteCarousel/InfiniteCarousel.module.css
@@ -7,6 +7,7 @@
     padding-block: 1rem;
     
     display: flex;
+    align-items: center;
     flex-wrap: wrap;
     gap: 1rem;
 }
